--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   google_maps_flutter: ^2.5.0
   http: ^0.13.3
   supabase_flutter: ^1.10.25
+  mime: ^1.0.4
+  uuid: ^4.2.1
 
 dev_dependencies:
   flutter_test:
