--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_maps_flutter: ^2.5.0
   http: ^0.13.3
+  geolocator: ^10.1.0
+  permission_handler: ^11.0.0
 
 dev_dependencies:
   flutter_test:
