--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   supabase_flutter: ^1.10.25
   mime: ^1.0.4
   uuid: ^4.2.1
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
