Add profile api

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   mime: ^1.0.4
   uuid: ^4.2.1
   image_picker: ^1.0.4
+  unique_name_generator: ^1.0.0
 
 dev_dependencies:
   flutter_test:
