--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   uuid: ^4.2.1
   image_picker: ^1.0.4
   unique_name_generator: ^1.0.0
+  supabase_auth_ui: ^0.2.1
 
 dev_dependencies:
   flutter_test:
